# aurora

./: .gitignore  Aurora.py  README.md  bar.py  daemon.py  installer.py  pyproject.toml
aurora/: Aurora.py  autoupdate.py  check.py  config.py  daemon.py  functions.py  installer.py  logos.py  main.py  responses.py  settings.py  status.py  strings.py
aurora/config/: paths.py
aurora/drivers/: driver.py  ubuntu.py
packaging/aur/: PKGBUILD
tests/: test_ubuntu_driver.py
